@@ -1,3 +1,4 @@
+	GedCom import added (experimental)
 	All fields are now editable
 	Can now delete anything (subject to permission)
 	census re-written to allow multiple countries
